// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabwareList component renders 1`] = `
<div
  className="labware_list_wrapper"
>
  <div
    className="message_wrapper"
  >
    <p
      className="italic"
    >
      No labware definitions found
      <br />
      Please add custom labware via the Labware Management options above
    </p>
  </div>
</div>
`;

exports[`LabwareList component renders 2`] = `
<div
  className="labware_list_wrapper"
>
  <div
    className="message_wrapper"
  >
    <Warning>
      <p>
        Unable to read Custom Labware source folder.
        <br />
        Please ensure you are able to access the folder selected in Labware Management above.
      </p>
      <p
        className="error_message"
      >
        AH!!!
      </p>
    </Warning>
  </div>
</div>
`;

exports[`LabwareList component renders 3`] = `
<div
  className="labware_list_wrapper"
>
  <div
    className="list_column_titles"
  >
    <p
      className="item_category_column"
    >
      Category
    </p>
    <p
      className="item_name_column"
    >
      Labware
    </p>
    <p
      className="item_date_column"
    >
      Date Added
    </p>
  </div>
  <ul
    className="unstyled_list"
  >
    <LabwareItem
      file={
        Object {
          "definition": Object {
            "brand": Object {
              "brand": "Opentrons",
            },
            "cornerOffsetFromSlot": Object {
              "x": 0,
              "y": 0,
              "z": 0,
            },
            "dimensions": Object {
              "xDimension": 0,
              "yDimension": 0,
              "zDimension": 0,
            },
            "groups": Array [],
            "metadata": Object {
              "displayCategory": "wellPlate",
              "displayName": "A",
              "displayVolumeUnits": "mL",
            },
            "namespace": "custom",
            "ordering": Array [],
            "parameters": Object {
              "format": "mock",
              "isMagneticModuleCompatible": false,
              "isTiprack": false,
              "loadName": "a",
            },
            "schemaVersion": 2,
            "version": 1,
            "wells": Object {},
          },
          "filename": "a.json",
          "modified": 1,
          "type": "VALID_LABWARE_FILE",
        }
      }
      key="a.json"
    />
    <LabwareItem
      file={
        Object {
          "filename": "b.json",
          "modified": 2,
          "type": "INVALID_LABWARE_FILE",
        }
      }
      key="b.json"
    />
    <LabwareItem
      file={
        Object {
          "definition": Object {
            "brand": Object {
              "brand": "Opentrons",
            },
            "cornerOffsetFromSlot": Object {
              "x": 0,
              "y": 0,
              "z": 0,
            },
            "dimensions": Object {
              "xDimension": 0,
              "yDimension": 0,
              "zDimension": 0,
            },
            "groups": Array [],
            "metadata": Object {
              "displayCategory": "wellPlate",
              "displayName": "C",
              "displayVolumeUnits": "mL",
            },
            "namespace": "opentrons",
            "ordering": Array [],
            "parameters": Object {
              "format": "mock",
              "isMagneticModuleCompatible": false,
              "isTiprack": false,
              "loadName": "c",
            },
            "schemaVersion": 2,
            "version": 1,
            "wells": Object {},
          },
          "filename": "c.json",
          "modified": 3,
          "type": "OPENTRONS_LABWARE_FILE",
        }
      }
      key="c.json"
    />
    <LabwareItem
      file={
        Object {
          "definition": Object {
            "brand": Object {
              "brand": "Opentrons",
            },
            "cornerOffsetFromSlot": Object {
              "x": 0,
              "y": 0,
              "z": 0,
            },
            "dimensions": Object {
              "xDimension": 0,
              "yDimension": 0,
              "zDimension": 0,
            },
            "groups": Array [],
            "metadata": Object {
              "displayCategory": "wellPlate",
              "displayName": "D",
              "displayVolumeUnits": "mL",
            },
            "namespace": "custom",
            "ordering": Array [],
            "parameters": Object {
              "format": "mock",
              "isMagneticModuleCompatible": false,
              "isTiprack": false,
              "loadName": "d",
            },
            "schemaVersion": 2,
            "version": 1,
            "wells": Object {},
          },
          "filename": "d.json",
          "modified": 4,
          "type": "DUPLICATE_LABWARE_FILE",
        }
      }
      key="d.json"
    />
  </ul>
</div>
`;
